Refactored to use URL instead of URI SimpleFTP: -added support for UTF8, disabled by default because I need to find a good way to convert between UTF8 and non UTF8 urls -refactored encoding stuff into different classes
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@32988 ebf7c1c2-ba36-0410-9fe8-c592906822b4

Former-commit-id: c0a6ba55efa82551426f0b4ebe0dedb22e70a8cc